[gd_scene load_steps=7 format=3 uid="uid://t8n3u8q7t8t8"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_1qesj"]
[ext_resource type="PackedScene" uid="uid://42qq4ke7te0s" path="res://scenes/TitleScreen.tscn" id="1_sc5co"]
[ext_resource type="PackedScene" uid="uid://cnr3v8uui8gwm" path="res://scenes/SettingsScreen.tscn" id="2_uw7i2"]
[ext_resource type="PackedScene" uid="uid://trke8ta7a50i" path="res://scenes/HelpScreen.tscn" id="3_dl76g"]
[ext_resource type="PackedScene" uid="uid://jmx1682k0vdg" path="res://scenes/GameScreen.tscn" id="4_n1bl8"]
[ext_resource type="PackedScene" uid="uid://bgdxjiqlqtl8g" path="res://scenes/GameOverScreen.tscn" id="5_3r1bu"]

[node name="Main" type="Node2D"]
script = ExtResource("1_1qesj")

[node name="TitleScreen" parent="." instance=ExtResource("1_sc5co")]

[node name="SettingsScreen" parent="." instance=ExtResource("2_uw7i2")]

[node name="HelpScreen" parent="." instance=ExtResource("3_dl76g")]

[node name="GameScreen" parent="." instance=ExtResource("4_n1bl8")]

[node name="GameOverScreen" parent="." instance=ExtResource("5_3r1bu")]
